# pydino

./: README.md  dino.py  pyproject.toml
reactgame/: state.py
