[tool.poetry]
name = "reactgame"
version = "0.1.0"
description = ""
authors = ["Yibo Wei <david_wyb2001@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
